xeto: stub out specFits to also use Fitter with explain

--- a/src/test/testData/tests/specIs.yaml
+++ b/src/test/testData/tests/specIs.yaml
@@ -1,6 +1,8 @@
 #
 # Tests for checking nominal typing with two specs
 #
+# NOTE: all these tests should match specFits too
+#
 
 ##########################################################################
 ## Sys
