--- a/src/test/testData/tests/specIs.yaml
+++ b/src/test/testData/tests/specIs.yaml
@@ -12,128 +12,99 @@
 ---
 name: "obj"
 verifySpecIs:
-  with: "sys::Obj"
-  trues:
-    - "sys::Obj"
-  falses:
-    - "sys::None"
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::Dict"
+  - {a: "sys::Obj", b: "sys::Obj",    expect: true}
+  - {a: "sys::Obj", b: "sys::None",   expect: false}
+  - {a: "sys::Obj", b: "sys::Scalar", expect: false}
+  - {a: "sys::Obj", b: "sys::Str",    expect: false}
+  - {a: "sys::Obj", b: "sys::Dict",   expect: false}
 ---
 name: "none"
 verifySpecIs:
-  with: "sys::None"
-  trues:
-    - "sys::Obj"
-    - "sys::None"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::Dict"
+  - {a: "sys::None", b: "sys::Obj",    expect: true}
+  - {a: "sys::None", b: "sys::None",   expect: true}
+  - {a: "sys::None", b: "sys::Scalar", expect: false}
+  - {a: "sys::None", b: "sys::Str",    expect: false}
+  - {a: "sys::None", b: "sys::Dict",   expect: false}
 ---
 name: "scalar"
 verifySpecIs:
-  with: "sys::Scalar"
-  trues:
-    - "sys::Obj"
-    - "sys::Scalar"
-  falses:
-    - "sys::None"
-    - "sys::Str"
-    - "sys::Dict"
+  - {a: "sys::Scalar", b: "sys::Obj",    expect: true}
+  - {a: "sys::Scalar", b: "sys::Scalar", expect: true}
+  - {a: "sys::Scalar", b: "sys::None",   expect: false}
+  - {a: "sys::Scalar", b: "sys::Str",    expect: false}
+  - {a: "sys::Scalar", b: "sys::Dict",   expect: false}
 ---
 name: "str"
 verifySpecIs:
-  with: "sys::Str"
-  trues:
-    - "sys::Obj"
-    - "sys::Scalar"
-    - "sys::Str"
-  falses:
-    - "sys::None"
-    - "sys::Number"
-    - "sys::Dict"
+  - {a: "sys::Str", b: "sys::Obj",    expect: true}
+  - {a: "sys::Str", b: "sys::Scalar", expect: true}
+  - {a: "sys::Str", b: "sys::Str",    expect: true}
+  - {a: "sys::Str", b: "sys::None",   expect: false}
+  - {a: "sys::Str", b: "sys::Number", expect: false}
+  - {a: "sys::Str", b: "sys::Dict",   expect: false}
 ---
 name: "number"
 verifySpecIs:
-  with: "sys::Number"
-  trues:
-    - "sys::Obj"
-    - "sys::Scalar"
-    - "sys::Number"
-  falses:
-    - "sys::None"
-    - "sys::Str"
-    - "sys::Int"
-    - "sys::Dict"
+  - {a: "sys::Number", b: "sys::Obj",    expect: true}
+  - {a: "sys::Number", b: "sys::Scalar", expect: true}
+  - {a: "sys::Number", b: "sys::Number", expect: true}
+  - {a: "sys::Number", b: "sys::None",   expect: false}
+  - {a: "sys::Number", b: "sys::Int",    expect: false}
+  - {a: "sys::Number", b: "sys::Str",    expect: false}
+  - {a: "sys::Number", b: "sys::Dict",   expect: false}
 ---
 name: "int"
 verifySpecIs:
-  with: "sys::Int"
-  trues:
-    - "sys::Obj"
-    - "sys::Scalar"
-    - "sys::Number"
-    - "sys::Int"
-  falses:
-    - "sys::None"
-    - "sys::Str"
-    - "sys::Duration"
-    - "sys::Dict"
+  - {a: "sys::Int", b: "sys::Obj",    expect: true}
+  - {a: "sys::Int", b: "sys::Scalar", expect: true}
+  - {a: "sys::Int", b: "sys::Number", expect: true}
+  - {a: "sys::Int", b: "sys::Int",    expect: true}
+  - {a: "sys::Int", b: "sys::None",   expect: false}
+  - {a: "sys::Int", b: "sys::Str",    expect: false}
+  - {a: "sys::Int", b: "sys::Dict",   expect: false}
 ---
 name: "seq"
 verifySpecIs:
-  with: "sys::Seq"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-  falses:
-    - "sys::None"
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::Dict"
+  - {a: "sys::Seq", b: "sys::Obj",    expect: true}
+  - {a: "sys::Seq", b: "sys::Seq",    expect: true}
+  - {a: "sys::Seq", b: "sys::Scalar", expect: false}
+  - {a: "sys::Seq", b: "sys::Number", expect: false}
+  - {a: "sys::Seq", b: "sys::None",   expect: false}
+  - {a: "sys::Seq", b: "sys::List",   expect: false}
+  - {a: "sys::Seq", b: "sys::Dict",   expect: false}
 ---
 name: "list"
 verifySpecIs:
-  with: "sys::List"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::List"
-  falses:
-    - "sys::None"
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::Dict"
+  - {a: "sys::List", b: "sys::Obj",    expect: true}
+  - {a: "sys::List", b: "sys::Seq",    expect: true}
+  - {a: "sys::List", b: "sys::List",   expect: true}
+  - {a: "sys::List", b: "sys::None",   expect: false}
+  - {a: "sys::List", b: "sys::Scalar", expect: false}
+  - {a: "sys::List", b: "sys::Int",    expect: false}
+  - {a: "sys::List", b: "sys::Str",    expect: false}
+  - {a: "sys::List", b: "sys::Dict",   expect: false}
 ---
 name: "dict"
 verifySpecIs:
-  with: "sys::Dict"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-  falses:
-    - "sys::None"
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "sys::Spec"
+  - {a: "sys::Dict", b: "sys::Obj",    expect: true}
+  - {a: "sys::Dict", b: "sys::Seq",    expect: true}
+  - {a: "sys::Dict", b: "sys::Dict",   expect: true}
+  - {a: "sys::Dict", b: "sys::None",   expect: false}
+  - {a: "sys::Dict", b: "sys::Scalar", expect: false}
+  - {a: "sys::Dict", b: "sys::Int",    expect: false}
+  - {a: "sys::Dict", b: "sys::Str",    expect: false}
+  - {a: "sys::Dict", b: "sys::List",   expect: false}
 ---
 name: "spec"
 verifySpecIs:
-  with: "sys::Spec"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "sys::Spec"
-  falses:
-    - "sys::None"
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
+  - {a: "sys::Spec", b: "sys::Obj",    expect: true}
+  - {a: "sys::Spec", b: "sys::Seq",    expect: true}
+  - {a: "sys::Spec", b: "sys::Dict",   expect: true}
+  - {a: "sys::Spec", b: "sys::Spec",   expect: true}
+  - {a: "sys::Spec", b: "sys::None",   expect: false}
+  - {a: "sys::Spec", b: "sys::Scalar", expect: false}
+  - {a: "sys::Spec", b: "sys::Str",    expect: false}
+  - {a: "sys::Spec", b: "sys::List",   expect: false}
 ---
 
 ##########################################################################
@@ -145,31 +116,24 @@ name: "maybeStr"
 compileLib: |
   Foo: Str?
 verifySpecIs:
-  with: "test::Foo"
-  trues:
-    - "sys::Obj"
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::None"
-  falses:
-    - "sys::Number"
-    - "sys::Seq"
-    - "sys::Dict"
+  - {a: "test::Foo", b: "sys::Obj",    expect: true}
+  - {a: "test::Foo", b: "sys::Scalar", expect: true}
+  - {a: "test::Foo", b: "sys::Str",    expect: true}
+  - {a: "test::Foo", b: "sys::None",   expect: true}
+  - {a: "test::Foo", b: "sys::Number", expect: false}
+  - {a: "test::Foo", b: "sys::Seq",    expect: false}
 ---
 name: "maybeList"
 compileLib: |
   Foo: List? <of:Str>
 verifySpecIs:
-  with: "test::Foo"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::List"
-    - "sys::None"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::Dict"
+  - {a: "test::Foo", b: "sys::Obj",    expect: true}
+  - {a: "test::Foo", b: "sys::Seq",    expect: true}
+  - {a: "test::Foo", b: "sys::List",   expect: true}
+  - {a: "test::Foo", b: "sys::None",   expect: true}
+  - {a: "test::Foo", b: "sys::Scalar", expect: false}
+  - {a: "test::Foo", b: "sys::Str",    expect: false}
+  - {a: "test::Foo", b: "sys::Dict",   expect: false}
 ---
 name: "maybeCustom"
 compileLib: |
@@ -177,17 +141,14 @@ compileLib: |
   Bar: Foo
   Baz: Bar?
 verifySpecIs:
-  with: "test::Baz"
-  trues:
-    - "sys::Obj"
-    - "sys::Dict"
-    - "test::Foo"
-    - "test::Bar"
-    - "test::Baz"
-    - "sys::None"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
+  - {a: "test::Baz", b: "sys::Obj",    expect: true}
+  - {a: "test::Baz", b: "sys::Dict",   expect: true}
+  - {a: "test::Baz", b: "test::Foo",   expect: true}
+  - {a: "test::Baz", b: "test::Bar",   expect: true}
+  - {a: "test::Baz", b: "test::Baz",   expect: true}
+  - {a: "test::Baz", b: "sys::None",   expect: true}
+  - {a: "test::Baz", b: "sys::Scalar", expect: false}
+  - {a: "test::Baz", b: "sys::Str",    expect: false}
 ---
 name: "maybeOverride"
 compileLib: |
@@ -195,17 +156,14 @@ compileLib: |
   Bar: Foo?
   Baz: Bar
 verifySpecIs:
-  with: "test::Baz"
-  trues:
-    - "sys::Obj"
-    - "sys::Dict"
-    - "test::Foo"
-    - "test::Bar"
-    - "test::Baz"
-  falses:
-    - "sys::None"
-    - "sys::Scalar"
-    - "sys::Str"
+  - {a: "test::Baz", b: "sys::Obj",    expect: true}
+  - {a: "test::Baz", b: "sys::Dict",   expect: true}
+  - {a: "test::Baz", b: "test::Foo",   expect: true}
+  - {a: "test::Baz", b: "test::Bar",   expect: true}
+  - {a: "test::Baz", b: "test::Baz",   expect: true}
+  - {a: "test::Baz", b: "sys::None",   expect: false}
+  - {a: "test::Baz", b: "sys::Scalar", expect: false}
+  - {a: "test::Baz", b: "sys::Str",    expect: false}
 ---
 
 
@@ -221,21 +179,17 @@ compileLib: |
   Baz: Foo & Bar
   Qux: Foo
 verifySpecIs:
-  with: "test::Baz"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "sys::And"
-    - "test::Foo"
-    - "test::Bar"
-    - "test::Baz"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "sys::Or"
-    - "test::Qux"
+  - {a: "test::Baz", b: "sys::Obj",    expect: true}
+  - {a: "test::Baz", b: "sys::Seq",    expect: true}
+  - {a: "test::Baz", b: "sys::Dict",   expect: true}
+  - {a: "test::Baz", b: "sys::And",    expect: true}
+  - {a: "test::Baz", b: "test::Foo",   expect: true}
+  - {a: "test::Baz", b: "test::Bar",   expect: true}
+  - {a: "test::Baz", b: "test::Baz",   expect: true}
+  - {a: "test::Baz", b: "sys::Scalar", expect: false}
+  - {a: "test::Baz", b: "sys::List",   expect: false}
+  - {a: "test::Baz", b: "sys::Or",     expect: false}
+  - {a: "test::Baz", b: "test::Qux",   expect: false}
 ---
 name: "andFlip"
 compileLib: |
@@ -243,18 +197,14 @@ compileLib: |
   Bar: Dict
   Baz: Foo & Bar
 verifySpecIs:
-  with: "test::Foo"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "test::Foo"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "test::Bar"
-    - "test::Baz"
+  - {a: "test::Foo", b: "sys::Obj",    expect: true}
+  - {a: "test::Foo", b: "sys::Seq",    expect: true}
+  - {a: "test::Foo", b: "sys::Dict",   expect: true}
+  - {a: "test::Foo", b: "test::Foo",   expect: true}
+  - {a: "test::Foo", b: "sys::Scalar", expect: false}
+  - {a: "test::Foo", b: "sys::Str",    expect: false}
+  - {a: "test::Foo", b: "test::Bar",   expect: false}
+  - {a: "test::Foo", b: "test::Baz",   expect: false}
 ---
 name: "andNest"
 compileLib: |
@@ -263,21 +213,17 @@ compileLib: |
   Baz: Foo & Bar
   Qux: Baz
 verifySpecIs:
-  with: "test::Qux"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "sys::And"
-    - "test::Foo"
-    - "test::Bar"
-    - "test::Baz"
-    - "test::Qux"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "sys::Or"
+  - {a: "test::Qux", b: "sys::Obj",    expect: true}
+  - {a: "test::Qux", b: "sys::Seq",    expect: true}
+  - {a: "test::Qux", b: "sys::Dict",   expect: true}
+  - {a: "test::Qux", b: "sys::And",    expect: true}
+  - {a: "test::Qux", b: "test::Foo",   expect: true}
+  - {a: "test::Qux", b: "test::Bar",   expect: true}
+  - {a: "test::Qux", b: "test::Baz",   expect: true}
+  - {a: "test::Qux", b: "test::Qux",   expect: true}
+  - {a: "test::Qux", b: "sys::Scalar", expect: false}
+  - {a: "test::Qux", b: "sys::Str",    expect: false}
+  - {a: "test::Qux", b: "sys::Or",     expect: false}
 ---
 name: "andNestDeep"
 compileLib: |
@@ -293,28 +239,23 @@ compileLib: |
   X: AB & CD & AE2
   Y: AB & CD & AE2
 verifySpecIs:
-  with: "test::X"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "sys::And"
-    - "test::A"
-    - "test::B"
-    - "test::C"
-    - "test::D"
-    - "test::E"
-    - "test::AB"
-    - "test::CD"
-    - "test::AE"
-    - "test::AE2"
-    - "test::X"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "sys::Or"
-    - "test::Y"
+  - {a: "test::X", b: "sys::Obj",    expect: true}
+  - {a: "test::X", b: "sys::Seq",    expect: true}
+  - {a: "test::X", b: "sys::Dict",   expect: true}
+  - {a: "test::X", b: "sys::And",    expect: true}
+  - {a: "test::X", b: "test::A",     expect: true}
+  - {a: "test::X", b: "test::B",     expect: true}
+  - {a: "test::X", b: "test::C",     expect: true}
+  - {a: "test::X", b: "test::D",     expect: true}
+  - {a: "test::X", b: "test::E",     expect: true}
+  - {a: "test::X", b: "test::AB",    expect: true}
+  - {a: "test::X", b: "test::CD",    expect: true}
+  - {a: "test::X", b: "test::AE",    expect: true}
+  - {a: "test::X", b: "test::AE2",   expect: true}
+  - {a: "test::X", b: "test::X",     expect: true}
+  - {a: "test::X", b: "sys::Scalar", expect: false}
+  - {a: "test::X", b: "sys::Str",    expect: false}
+  - {a: "test::X", b: "test::Y",     expect: false}
 ---
 
 ##########################################################################
@@ -328,19 +269,16 @@ compileLib: |
   Bar: Dict
   Baz: Foo | Bar
 verifySpecIs:
-  with: "test::Baz"
-  trues:
-    - "sys::Obj"
-    - "sys::Or"
-    - "sys::Dict"  # common base
-    - "test::Baz"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "sys::And"
-    - "test::Foo"
-    - "test::Bar"
+  - {a: "test::Baz", b: "sys::Obj",    expect: true}
+  - {a: "test::Baz", b: "sys::Or",     expect: true}
+  - {a: "test::Baz", b: "sys::Dict",   expect: true} # common base
+  - {a: "test::Baz", b: "test::Baz",   expect: true}
+  - {a: "test::Baz", b: "sys::Scalar", expect: false}
+  - {a: "test::Baz", b: "sys::Str",    expect: false}
+  - {a: "test::Baz", b: "sys::List",   expect: false}
+  - {a: "test::Baz", b: "sys::And",    expect: false}
+  - {a: "test::Baz", b: "test::Foo",   expect: false}
+  - {a: "test::Baz", b: "test::Bar",   expect: false}
 ---
 name: "orCommon"
 compileLib: |
@@ -353,22 +291,19 @@ compileLib: |
   E:  CB
   Foo: D | E
 verifySpecIs:
-  with: "test::Foo"
-  trues:
-    - "sys::Obj"
-    - "sys::Or"
-    - "sys::Seq"   # common base
-    - "sys::Dict"  # common base
-    - "test::C"    # common base
-    - "test::Foo"
-  falses:
-    - "sys::Scalar"
-    - "sys::Str"
-    - "sys::List"
-    - "test::A"
-    - "test::B"
-    - "test::D"
-    - "test::E"
+  - {a: "test::Foo", b: "sys::Obj",    expect: true}
+  - {a: "test::Foo", b: "sys::Or",     expect: true}
+  - {a: "test::Foo", b: "sys::Seq",    expect: true} #common base
+  - {a: "test::Foo", b: "sys::Dict",   expect: true} #common base
+  - {a: "test::Foo", b: "test::C",     expect: true} #common base
+  - {a: "test::Foo", b: "test::Foo",   expect: true}
+  - {a: "test::Foo", b: "sys::Scalar", expect: false}
+  - {a: "test::Foo", b: "sys::Str",    expect: false}
+  - {a: "test::Foo", b: "sys::List",   expect: false}
+  - {a: "test::Foo", b: "test::A",     expect: false}
+  - {a: "test::Foo", b: "test::B",     expect: false}
+  - {a: "test::Foo", b: "test::D",     expect: false}
+  - {a: "test::Foo", b: "test::E",     expect: false}
 ---
 name: "orFlip"
 compileLib: |
@@ -376,17 +311,14 @@ compileLib: |
   Bar: Dict
   Baz: Foo | Bar
 verifySpecIs:
-  with: "test::Foo"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "test::Foo"
-    - "test::Baz"
-  falses:
-    - "sys::Str"
-    - "sys::List"
-    - "test::Bar"
+  - {a: "test::Foo", b: "sys::Obj",    expect: true}
+  - {a: "test::Foo", b: "sys::Seq",    expect: true}
+  - {a: "test::Foo", b: "sys::Dict",   expect: true}
+  - {a: "test::Foo", b: "test::Foo",   expect: true}
+  - {a: "test::Foo", b: "test::Baz",   expect: true}
+  - {a: "test::Foo", b: "sys::Scalar", expect: false}
+  - {a: "test::Foo", b: "sys::Str",    expect: false}
+  - {a: "test::Foo", b: "test::Bar",   expect: false}
 ---
 name: "orFlipInherit"
 compileLib: |
@@ -395,18 +327,15 @@ compileLib: |
   Baz: Foo | Bar
   Qux: Foo
 verifySpecIs:
-  with: "test::Qux"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "test::Foo"
-    - "test::Baz"
-    - "test::Qux"
-  falses:
-    - "sys::Str"
-    - "sys::List"
-    - "test::Bar"
+  - {a: "test::Qux", b: "sys::Obj",   expect: true}
+  - {a: "test::Qux", b: "sys::Seq",  expect: true}
+  - {a: "test::Qux", b: "sys::Dict", expect: true}
+  - {a: "test::Qux", b: "test::Foo", expect: true}
+  - {a: "test::Qux", b: "test::Baz", expect: true}
+  - {a: "test::Qux", b: "test::Qux", expect: true}
+  - {a: "test::Qux", b: "sys::Str",  expect: false}
+  - {a: "test::Qux", b: "sys::List", expect: false}
+  - {a: "test::Qux", b: "test::Bar", expect: false}
 ---
 name: "orFlipBase"
 compileLib: |
@@ -415,16 +344,13 @@ compileLib: |
   Qux: Foo
   Baz: Qux | Bar
 verifySpecIs:
-  with: "test::Foo"
-  trues:
-    - "sys::Obj"
-    - "sys::Seq"
-    - "sys::Dict"
-    - "test::Foo"
-  falses:
-    - "sys::Str"
-    - "sys::List"
-    - "test::Baz"
-    - "test::Qux"
+  - {a: "test::Foo", b: "sys::Obj",  expect: true}
+  - {a: "test::Foo", b: "sys::Seq",  expect: true}
+  - {a: "test::Foo", b: "sys::Dict", expect: true}
+  - {a: "test::Foo", b: "test::Foo", expect: true}
+  - {a: "test::Foo", b: "sys::Str",  expect: false}
+  - {a: "test::Foo", b: "sys::List", expect: false}
+  - {a: "test::Foo", b: "test::Baz", expect: false}
+  - {a: "test::Foo", b: "test::Qux", expect: false}
 ---
 
