xeto: get maybe covariant narrowing overrides working with None

--- a/src/test/testData/tests/specIs.yaml
+++ b/src/test/testData/tests/specIs.yaml
@@ -22,7 +22,7 @@ name: "none"
 verifySpecIs:
   - {a: "sys::None", b: "sys::Obj",    expect: true}
   - {a: "sys::None", b: "sys::None",   expect: true}
-  - {a: "sys::None", b: "sys::Scalar", expect: false}
+  - {a: "sys::None", b: "sys::Scalar", expect: true}
   - {a: "sys::None", b: "sys::Str",    expect: false}
   - {a: "sys::None", b: "sys::Dict",   expect: false}
 ---
