haystack: add SpanMode for pastWeek, pastMonth, pastQuarter, pastYear

--- a/src/core/haystack/locale/en.props
+++ b/src/core/haystack/locale/en.props
@@ -16,6 +16,10 @@ quarter1=Q1
 quarter2=Q2
 quarter3=Q3
 quarter4=Q4
+pastMonth=Past Month
+pastQuarter=Past Quarter
+pastWeek=Past Week
+pastYear=Past Year
 thisMonth=This Month
 thisQuarter=This Quarter
 thisWeek=This Week
