xetoc: tweak Parser so that markers inherit their scalar value from sys::Marker itself

--- a/src/test/testXeto/tests/compileLib.yaml
+++ b/src/test/testXeto/tests/compileLib.yaml
@@ -57,7 +57,7 @@ verifyTypes:
         type: "sys::Marker"
         meta:
           doc: "inherit"
-          val: "sys::Marker"
+          val: "inherit"
 ---
 name: "slotWithMeta"
 compileLib: |
