--- a/src/test/testXeto/tests/compileErrs.yaml
+++ b/src/test/testXeto/tests/compileErrs.yaml
@@ -40,13 +40,6 @@ compileLib: |
 verifyErrs: |
   Conflicing inherited slots: temp::Foo.x, temp::Bar.x
 ---
-name: "conflictSlots2"
-compileLib: |
-  Foo: Bar {x:Str}
-  Bar: {x:Date}
-verifyErrs: |
-  Slot 'x' type 'sys::Str' conflicts inherited slot 'temp::Bar.x' of type 'sys::Date'
----
 
 ##########################################################################
 ## CheckErrors
@@ -65,3 +58,28 @@ verifyErrs: |
   Spec 'Foo' cannot use reserved meta tag 'lib'
   Spec 'Foo' cannot use reserved meta tag 'loc'
 ---
+name: "wrongInheritType"
+compileLib: |
+  Foo: {
+    x:Date
+    y:Number
+  }
+  Bar: Foo {
+    x:Str
+    y:Int  // ok
+  }
+verifyErrs: |
+  Slot 'x' type 'sys::Str' conflicts inherited slot 'temp::Foo.x' of type 'sys::Date'
+---
+name: "wrongGlobalType"
+compileLib: |
+  x: Str
+  y: Number
+  Bar: {
+    x
+    y: Int // ok
+  }
+verifyErrs: |
+  Slot 'x' type 'sys::Marker' conflicts global slot 'temp::x' of type 'sys::Str'
+---
+
