Some renaming, and completion. Finished docker setup includes five files:
docker/Dockerfile
docker/docker-compose.yml
docker/.dockerignore
docker/hx_dockerstart.sh
    this is the wrapper script.

.github/workflows/publish-dockerdefault.yaml

To build the image, go into the docker folder and run this command,
or just put the path to docker-compose.yml file after the -f option, if running from a different location.

docker compose -f docker-compose.yml build --pull --no-cache --progress=plain

To test it, do:
docker compose -f docker-compose.yml run --rm -it -p 8082:8082 haxall

--- a/docker/.dockerignore
+++ b/docker/.dockerignore
@@ -37,11 +37,10 @@
 
 
 # The following was listed by me:
-**/.dockerignore
 **/.git
 **/.gitignore
 **/.github
-**/compose.y*ml
-**/*Dockerfile*
-**/*dockerfile*
+**/.dockerignore
+**/Dockerfile
+**/docker-compose*.y*ml
 readme.md
