--- a/.github/workflows/publish-dockerdefault.yaml
+++ b/.github/workflows/publish-dockerdefault.yaml
@@ -57,8 +57,9 @@ jobs:
       #   run: docker compose -f docker-compose.yml --progress=plain build --pull --no-cache --tag ${{ steps.meta.outputs.tags }} --label ${{ steps.meta.outputs.labels }}
         
       #About Docker bake: https://docs.docker.com/reference/cli/docker/buildx/bake/#set
+      #Using github actions: https://github.com/docker/bake-action
       - name: Build Docker image with docker bake
-        run: docker buildx bake -f docker-compose.yml --progress=plain --pull --no-cache --set haxall.tags=${{ steps.meta.outputs.tags }} --set haxall.labels=${{ steps.meta.outputs.labels }} haxall
+        run: docker buildx bake -f docker-compose.yml --progress=plain --pull --no-cache --set haxall.tags="${{ steps.meta.outputs.tags }}" --set haxall.labels."${{ steps.meta.outputs.labels }}" haxall
       
       - name: Push Docker image
         run: docker push ${{ env.REGISTRY }}/{{env.IMAGE_NAME }}:latest
