--- a/.github/workflows/publish-dockerdefault.yaml
+++ b/.github/workflows/publish-dockerdefault.yaml
@@ -59,7 +59,7 @@ jobs:
       #About Docker bake: https://docs.docker.com/reference/cli/docker/buildx/bake/#set
       #Using github actions: https://github.com/docker/bake-action
       - name: Build Docker image with docker bake
-        run: docker buildx bake -f docker-compose.yml --progress=plain --pull --push --no-cache --set haxall.tags="${{ steps.meta.outputs.tags }}" --set haxall.labels."${{ steps.meta.outputs.labels }}" haxall
+        run: docker buildx bake -f docker-compose.yml --progress=plain --pull --no-cache --set haxall.tags="${{ steps.meta.outputs.tags }}" --set haxall.labels."${{ steps.meta.outputs.labels }}" haxall
       
       - name: Push Docker image
-        run: docker push ${{ env.REGISTRY }}/{{ env.IMAGE_NAME }}:latest
+        run: docker push ${{ steps.meta.outputs.tags }}/docker:latest
