Last changes made to workflows file and readme.md

--- a/.github/workflows/publish-dockerdefault.yaml
+++ b/.github/workflows/publish-dockerdefault.yaml
@@ -40,14 +40,16 @@ jobs:
         id: meta
         uses: docker/metadata-action@v3
         with:
-          # flavor: |
-          #   latest=true
+          flavor: |
+            latest=auto
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             # tag with version number upon "git push tag"
             type=match,pattern=v(.*),group=1
             # set latest tag for default branch
             type=raw,value=latest,enable=${{ github.ref == format('refs/heads/{0}', 'main') }}
+            # leave this on
+            type=ref,event=branch
 
       # The github 'docker/bake-action' runs into a registry error... 
       # Using https://github.com/docker/build-push-action
